--- a/SurveyEducation/Views/Shared/_Header.cshtml
+++ b/SurveyEducation/Views/Shared/_Header.cshtml
@@ -20,7 +20,7 @@
     </div>*@
     <nav class="navbar navbar-expand-lg  py-4" id="navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="#">
                 Mega<span>kit.</span>
             </a>
 
@@ -33,17 +33,14 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/Home/Index">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/Home/About">About us <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/Home/Survey" aria-haspopup="true" aria-expanded="false">Blog</a>
+                        <a class="nav-link" href="/Home/Survey" aria-expanded="false">Surveys</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="/Home/Contact">Contact</a></li>
                 </ul>
 
                 <form class="form-lg-inline my-2 my-md-0 ml-lg-4 text-center">
-                    <a href="/Home/Contact" class="btn btn-solid-border btn-round-full">Get a Quote</a>
+                    <a href="/Account/Logout" class="btn btn-solid-border btn-round-full">Log out</a>
                 </form>
             </div>
         </div>
