--- a/SurveyEducation/Views/Home/Index.cshtml
+++ b/SurveyEducation/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
                     <div class="block">
                         <span class="d-block mb-3 text-white text-capitalize"> Chuẩn Bị Cho Tương Lai Mới</span>
                         <h1 class="animated fadeInUp mb-5"> Công việc của chúng tôi là <br /> tạo các cuộc khảo sát</h1>
-                        <a href="#" target="_blank" class="btn btn-main animated fadeInUp btn-round-full">Bắt đầu <i class="btn-icon fa fa-angle-right ml-2"></i></a>
+                        <a href="Survey" target="_blank" class="btn btn-main animated fadeInUp btn-round-full">Bắt đầu <i class="btn-icon fa fa-angle-right ml-2"></i></a>
                     </div>
                 </div>
             </div>
