--- a/SurveyEducation/Views/Home/Survey.cshtml
+++ b/SurveyEducation/Views/Home/Survey.cshtml
@@ -11,8 +11,8 @@
 
                         <div class="blog-item-content bg-white p-5">
                             <div class="blog-item-meta bg-gray py-1 px-2">
-                                <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Creativity</span>
-                                    <span class="text-muted text-capitalize mr-3"><i class="ti-comment mr-2"></i>5 Comments</span>
+                                @*<span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Creativity</span>
+                                    <span class="text-muted text-capitalize mr-3"><i class="ti-comment mr-2"></i>5 Comments</span>*@
                                 <span class="text-black text-capitalize mr-3"><i class="ti-time mr-1"></i> @item.StartTime</span>
                                 <span class="text-black text-capitalize mr-3"><i class="ti-time mr-1"></i> @item.EndTime</span>
                             </div>
@@ -28,16 +28,16 @@
         </div>
 
         @*<div class="row justify-content-center mt-5">
-            <div class="col-lg-6 text-center">
-                <nav class="navigation pagination d-inline-block">
-                    <div class="nav-links">
-                        <a class="prev page-numbers" href="#">Prev</a>
-                        <span aria-current="page" class="page-numbers current">1</span>
-                        <a class="page-numbers" href="#">2</a>
-                        <a class="next page-numbers" href="#">Next</a>
-                    </div>
-                </nav>
-            </div>
-        </div>*@
+                <div class="col-lg-6 text-center">
+                    <nav class="navigation pagination d-inline-block">
+                        <div class="nav-links">
+                            <a class="prev page-numbers" href="#">Prev</a>
+                            <span aria-current="page" class="page-numbers current">1</span>
+                            <a class="page-numbers" href="#">2</a>
+                            <a class="next page-numbers" href="#">Next</a>
+                        </div>
+                    </nav>
+                </div>
+            </div>*@
     </div>
 </section>
