--- a/SurveyEducation/Views/Shared/_Head.cshtml
+++ b/SurveyEducation/Views/Shared/_Head.cshtml
@@ -20,4 +20,7 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="~/Public/css/style.css">
+
+    <!-- Page -->
+    <link href="~/Areas/Admin/Public/assets/vendor/css/pages/page-auth.css" rel="stylesheet" />
 </head>
