--- a/SurveyEducation/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Accounts/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<SurveyEducation.Models.Account>
+﻿@model PagedList.IPagedList<SurveyEducation.Models.Account>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
+
 
 @{
     ViewBag.Title = "Index";
@@ -6,130 +9,146 @@
 
 <h2>Index</h2>
 
+@using (Html.BeginForm("Index", "Accounts", FormMethod.Get))
+{
+    <p>
+        Find by keyword: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            Email
+        </th>
+        @*<th>
+            EmailConfirmed
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
+            PasswordHash
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PasswordHash)
+            SecurityStamp
+        </th>*@
+        <th>
+            PhoneNumber
+        </th>
+        @*<th>
+            PhoneNumberConfirmed
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SecurityStamp)
+            TwoFactorEnabled
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            LockoutEndDateUtc
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
+            LockoutEnabled
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TwoFactorEnabled)
+            AccessFailedCount
+        </th>*@
+        <th>
+            UserName
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
+            Address
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LockoutEnabled)
+            Thumbnail
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.AccessFailedCount)
+            Status
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            RoleNumber
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            EmployeeNumber
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Thumbnail)
+            AddmissionDate
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RoleNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmployeeNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AddmissionDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateOfJoining)
+            DateOfJoining
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmailConfirmed)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PasswordHash)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SecurityStamp)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LockoutEnabled)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessFailedCount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Thumbnail)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RoleNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmployeeNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AddmissionDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateOfJoining)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            @*<td>
+                @Html.DisplayFor(modelItem => item.EmailConfirmed)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PasswordHash)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SecurityStamp)
+            </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            @*<td>
+                @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LockoutEnabled)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AccessFailedCount)
+            </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Thumbnail)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RoleNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmployeeNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AddmissionDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DateOfJoining)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
+
+<div class="row ms-3">
+    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+    @Html.PagedListPager(Model, page => Url.Action("Index",
+        new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+</div>
