--- a/SurveyEducation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -146,6 +146,23 @@
     <!-- / Layout wrapper -->
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
-    @Html.Partial("_Script")
+    <script src="~/Areas/Admin/Public/assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="~/Areas/Admin/Public/assets/vendor/libs/popper/popper.js"></script>
+    <script src="~/Areas/Admin/Public/assets/vendor/js/bootstrap.js"></script>
+    <script src="~/Areas/Admin/Public/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+
+    <script src="~/Areas/Admin/Public/assets/vendor/js/menu.js"></script>
+    <!-- endbuild -->
+    <!-- Vendors JS -->
+    <script src="~/Areas/Admin/Public/assets/vendor/libs/apex-charts/apexcharts.js"></script>
+
+    <!-- Main JS -->
+    <script src="~/Areas/Admin/Public/assets/js/main.js"></script>
+
+    <!-- Page JS -->
+    <script src="~/Areas/Admin/Public/assets/js/dashboards-analytics.js"></script>
+
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
