--- a/SurveyEducation/Areas/Admin/Views/Survey/Edit.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Edit.cshtml
@@ -75,7 +75,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-outline-success" />
             </div>
         </div>
     </div>
@@ -84,8 +84,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-    @RenderSection("scripts")
-}
