--- a/SurveyEducation/Areas/Admin/Views/Survey/Details.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Details.cshtml
@@ -42,7 +42,7 @@
                         </div>
                     </li>
                 </ul>
-                <ul data-box="questions-box" class="col-md-8 align-items-center" style="margin: 0 auto"></ul>
+                <ul data-box="questions-box" class="col-md-8 align-items-center py-3" style="margin: 0 auto"></ul>
             </div>
         </div>
     </div>
