--- a/SurveyEducation/Views/Home/Details.cshtml
+++ b/SurveyEducation/Views/Home/Details.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="col-lg-12 mb-5">
     <div class="single-blog-item">
-        <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300" alt="" class="img-fluid rounded d-flex align-items-center mt-4 col-md-8" style="margin: 0 auto">
+        <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300" alt="" class="img-fluid rounded d-flex align-items-center mt-4 col-md-8" style="margin: 0 auto;padding:0 50px">
 
 
         <div class="tab-pane show active bg-white" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
@@ -15,7 +15,7 @@
         </div>
 
         <div class="col-md-8 align-items-center" style="margin: 0 auto">
-            <ul data-box="questions-box"></ul>
+            <ul data-box="questions-box" style="text-decoration: none"></ul>
             @if (checkUser)
             {
                 <span>
