--- a/SurveyEducation/Views/Shared/_Header.cshtml
+++ b/SurveyEducation/Views/Shared/_Header.cshtml
@@ -36,13 +36,15 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="/Home/Survey" aria-expanded="false">Surveys</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Home/Blog" aria-expanded="false">Blog</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="/Home/Contact">Contact</a></li>
                 </ul>
-
                 <form class="form-lg-inline my-2 my-md-0 ml-lg-4 text-center">
                     <a href="/Account/Logout" class="btn btn-solid-border btn-round-full">Log out</a>
                 </form>
-            </div>
+            </div> 
         </div>
     </nav>
 </header>
