--- a/SurveyEducation/Areas/Admin/Views/Accounts/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Accounts/Create.cshtml
@@ -4,15 +4,15 @@
     ViewBag.Title = "Create";
 }
 
-<h2 class="ms-4 mt-2">Create</h2>
-
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="card ms-4 me-4">
-        <h5 class="card-header">Account</h5>
+    <div class="card m-4">
+        <div class="card-header">
+            <h4 class="fw-bold py-3"><span class="text-muted fw-light">Quản lý tài khoản /</span> Tạo mới tài khoản</h4>
+
+        </div>
         <div class="card-body">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="row">
@@ -102,15 +102,17 @@
                 </div>
             </div>
 
-            <div class="form-group mt-2">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-outline-success" />
+            <div class="row mt-3">
+                <div class="form-group col-md-6">
+                    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
+                </div>
+
+                <div class="form-group col-md-6">
+                    <div class="col-md-offset-2 col-md-12 d-flex justify-content-end">
+                        <input type="submit" value="Create" class="btn btn-outline-success" />
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary mt-2 ms-2" })
-</div>
