--- a/SurveyEducation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
             <div class="layout-page">
                 <!-- Navbar -->
 
-                <nav class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
+                <!--<nav class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
                      id="layout-navbar">
                     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
                         <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
@@ -27,9 +27,9 @@
                         </a>
                     </div>
 
-                    <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
+                    <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">-->
                         <!-- Search -->
-                        <div class="navbar-nav align-items-center">
+                        <!--<div class="navbar-nav align-items-center">
                             <div class="nav-item d-flex align-items-center">
                                 <i class="bx bx-search fs-4 lh-0"></i>
                                 <input type="text"
@@ -37,22 +37,22 @@
                                        placeholder="Search..."
                                        aria-label="Search... " />
                             </div>
-                        </div>
+                        </div>-->
                         <!-- /Search -->
 
-                        <ul class="navbar-nav flex-row align-items-center ms-auto">
+                        <!--<ul class="navbar-nav flex-row align-items-center ms-auto">-->
                             <!-- Place this tag where you want the button to render. -->
-                            <li class="nav-item lh-1 me-3">
+                            <!--<li class="nav-item lh-1 me-3">
                                 <a class="github-button"
                                    href="https://github.com/themeselection/sneat-html-admin-template-free"
                                    data-icon="octicon-star"
                                    data-size="large"
                                    data-show-count="true"
                                    aria-label="Star themeselection/sneat-html-admin-template-free on GitHub">Star</a>
-                            </li>
+                            </li>-->
 
                             <!-- User -->
-                            <li class="nav-item navbar-dropdown dropdown-user dropdown">
+                            <!--<li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
                                         <img src="~/Areas/Admin/Public/assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
@@ -116,11 +116,11 @@
                                         }
                                     </li>
                                 </ul>
-                            </li>
+                            </li>-->
                             <!--/ User -->
-                        </ul>
+                        <!--</ul>
                     </div>
-                </nav>
+                </nav>-->
 
                 <!-- / Navbar -->
                 <!-- Content wrapper -->
