--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -7,9 +7,11 @@
         margin-right: -42px;
     }
 </style>
-<div class="container-xxl flex-grow-1 container-p-y">
-    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Quản lý Survey/</span>Thêm Survey</h4>
-    <div class="row">
+<div class="card m-4">
+    <div class="card-header">
+        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Quản lý Survey/</span>Thêm Survey</h4>
+    </div>
+    <div class="card-body">
         @*<ul class="nav nav-pills m-3" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Tạo mới survey</button>
