--- a/SurveyEducation/Areas/Admin/Views/Survey/Delete.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Delete.cshtml
@@ -4,76 +4,80 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div class="ms-3">
-    <h4>Survey</h4>
+
+@*<h3>Are you sure you want to delete this?</h3>*@
+<div class="card m-4">
+    <div class="card-header">
+        <h2>Delete</h2>
+    </div>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+    <div class="card-body">
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartTime)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.StartTime)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartTime)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.StartTime)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndTime)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.EndTime)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndTime)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.EndTime)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.CreatedBy)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.CreatedBy)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Tag)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Tag)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Tag)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Tag)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.QuestionId)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.QuestionId)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.QuestionId)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.QuestionId)
+            </dd>
 
-    </dl>
+        </dl>
+    </div>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-outline-danger ms-3" /> |
+        <div class="form-actions no-color m-4">
+            <input type="submit" value="Delete" class="btn btn-outline-danger" /> |
             @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
         </div>
     }
