--- a/SurveyEducation/Views/Home/About.cshtml
+++ b/SurveyEducation/Views/Home/About.cshtml
@@ -26,7 +26,7 @@
                     <div class="about-item pr-3 mb-5 mb-lg-0">
                         <span class="h6 text-color">Chúng tôi là gì</span>
                         <h2 class="mt-3 mb-4 position-relative content-title">Chúng tôi là người tạo ra các cuộc khảo sát</h2>
-                        <p class="mb-5">Chúng tôi tiến hành khảo sát để nghiên cứu và thu thập dữ liệu từ các cuộc điều tra môi trường.</p>
+                        <p class="mb-5">Chúng tôi tiến hành khảo sát để nghiên cứu và thu thập dữ liệu từ các cuộc điều tra về trường học.</p>
 
                         <a href="#" class="btn btn-main btn-round-full">Bắt đầu</a>
                     </div>
@@ -48,7 +48,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="about-info-item mb-4 mb-lg-0">
                         <h3 class="mb-3"><span class="text-color mr-2 text-md ">01.</span>Nhiệm vụ của chúng tôi </h3>
-                        <p>Tạo các cuộc điều tra về môi trường để thu thập những ý tưởng hữu ích cho việc bảo vệ môi trường sống.</p>
+                        <p>Tạo các cuộc điều tra về trường học để thu thập những ý tưởng hữu ích cho việc phát triển môi trường học tập.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
@@ -305,7 +305,7 @@
                     <i class="ti-quote-left text-color"></i>
 
                     <div class="testimonial-item-content">
-                        <p class="testimonial-text">Đây là một cuộc khảo sát hữu ích mang lại nhiều lợi ích cho xã hội, sau đó sẽ tổng hợp những ý kiến hay nhất về vẫn đề bảo vệ môi trường ..</p>
+                        <p class="testimonial-text">Đây là một cuộc khảo sát hữu ích mang lại nhiều lợi ích cho xã hội, sau đó sẽ tổng hợp những ý kiến hay nhất về vẫn đề học đường  ..</p>
 
                         <div class="testimonial-author">
                             <h5 class="mb-0 text-capitalize">Thomas Johnson</h5>
@@ -317,8 +317,7 @@
                     <i class="ti-quote-left text-color"></i>
 
                     <div class="testimonial-item-content">
-                        <p class="testimonial-text">Các cuộc khảo sát mô tả chính xác hiện trạng của môi trường như thế nào và lấy ý kiến người tham gia khảo sát về các bước cải thiện.</p>
-
+                        <p class="testimonial-text">Các cuộc khảo sát mô tả lại những gì sảy ra trong khoảng thời gian đó. Đưa ra các ý kiến để có thể giải quyét vấn đề đó.</p>
                         <div class="testimonial-author">
                             <h5 class="mb-0 text-capitalize">Mickel hussy</h5>
                             <p>Excutive Director,themefisher</p>
@@ -329,7 +328,7 @@
                     <i class="ti-quote-left text-color"></i>
 
                     <div class="testimonial-item-content">
-                        <p class="testimonial-text">Đây là một cuộc khảo sát hữu ích mang lại nhiều lợi ích cho xã hội, sau đó sẽ tổng hợp những ý kiến hay nhất về vẫn đề bảo vệ môi trường ..</p>
+                        <p class="testimonial-text">Đây là một cuộc khảo sát hữu ích mang lại nhiều lợi ích cho xã hội, sau đó sẽ tổng hợp những ý kiến hay nhất về vẫn đề học đường  ..</p>
 
                         <div class="testimonial-author">
                             <h5 class="mb-0 text-capitalize">Thomas Johnson</h5>
@@ -341,8 +340,7 @@
                     <i class="ti-quote-left text-color"></i>
 
                     <div class="testimonial-item-content">
-                        <p class="testimonial-text">Các cuộc khảo sát mô tả chính xác hiện trạng của môi trường như thế nào và lấy ý kiến người tham gia khảo sát về các bước cải thiện.</p>
-
+                        <p class="testimonial-text">Các cuộc khảo sát mô tả lại những gì sảy ra trong khoảng thời gian đó. Đưa ra các ý kiến để có thể giải quyét vấn đề đó.</p>
                         <div class="testimonial-author">
                             <h5 class="mb-0 text-capitalize">Mickel hussy</h5>
                             <p>Excutive Director,themefisher</p>
