--- a/SurveyEducation/Views/Home/Index.cshtml
+++ b/SurveyEducation/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
             <div class="row">
                 <div class="col-lg-9 col-md-10">
                     <div class="block">
-                        <span class="d-block mb-3 text-white text-capitalize"> Chuẩn Bị Cho Tương Lai Mới</span>
-                        <h1 class="animated fadeInUp mb-5"> Công việc của chúng tôi là <br /> tạo các cuộc khảo sát</h1>
+                        <h1 class="animated fadeInUp"> Khảo sát giáo dục</h1>
+                        <span class="d-block mb-3 text-white text-capitalize">Thay đổi cách bạn tương tác với học sinh, phụ huynh và nhân viên để tăng hiệu suất giáo dục</span>
                         <a href="Survey" target="_blank" class="btn btn-main animated fadeInUp btn-round-full">Bắt đầu <i class="btn-icon fa fa-angle-right ml-2"></i></a>
                     </div>
                 </div>
@@ -29,22 +29,22 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="intro-item mb-5 mb-lg-0">
                         <i class="ti-desktop color-one"></i>
-                        <h4 class="mt-4 mb-3">Tạo ra các cuộc khảo sát về môi trường</h4>
-                        <p>Chúng tôi tạo ra các cuộc khảo sát  gần gũi và thiết thực nhất với cuộc sống thường ngày .</p>
+                        <h4 class="mt-4 mb-3">Cải thiện kinh nghiệm học tậpc</h4>
+                        <p>Các cuộc khảo sát có thể giúp cải thiện trải nghiệm học tập ở tất cả các cấp học.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="intro-item mb-5 mb-lg-0">
                         <i class="ti-medall color-one"></i>
-                        <h4 class="mt-4 mb-3">Tìm giải pháp bảo vệ môi trường</h4>
-                        <p> Những ý kiến người dùng đưa ra chúng tôi sẽ áp dụng vào thực tế nhằm cải tiện môi trường sống .</p>
+                        <h4 class="mt-4 mb-3">Nâng cao tinh thần nhân viên</h4>
+                        <p>Tương tự, đối với học sinh và sinh viên, những nhân viên trực tiếp tham gia cung cấp trải nghiệm học tập cũng cần được hỗ trợ nếu họ luôn tạo ra chất lượng giảng dạy ở mức cao nhất trong lớp học.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="intro-item">
                         <i class="ti-layers-alt color-one"></i>
-                        <h4 class="mt-4 mb-3">Kêu gọi mọi người trong mọi độ tuổi chung tay bảo vệ môi trường.</h4>
-                        <p>Hãy cùng nhau kêu gọi mọi người trong cộng đồng chung tay bảo vệ môi trường để có một thế giới toàn màu xanh .</p>
+                        <h4 class="mt-4 mb-3">Tăng cường sự tham gia của các bên liên quan</h4>
+                        <p>Bất kỳ cơ sở giáo dục nào, cho dù đó là trường học hay trường đại học sẽ có vai trò quan trọng trong cộng đồng của mình và tương tự, quan điểm của cộng đồng đó sẽ là điều cần thiết để đảm bảo trải nghiệm học tập do các cơ sở đó cung cấp là tốt nhất có thể.</p>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                 <div class="col-lg-7 text-center">
                     <div class="section-title">
                         <span class="h6 text-color">Dịch vụ của chúng tôi</span>
-                        <h2 class="mt-3 content-title">Chúng tôi cung cấp nhiều loại khảo sát môi trường</h2>
+                        <h2 class="mt-3 content-title">Chúng tôi cung cấp nhiều loại khảo sát</h2>
                     </div>
                 </div>
             </div>
@@ -122,44 +122,46 @@
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5">
-                        <h4 class="mb-3">Môi trường xã hội </h4>
-                        <p>Nơi cung cấp tài nguyên cần thiết cho cuộc sống và hoạt động sản xuất của con người: môi trường xã hội sẽ bao gồm các yếu tố như: chính trị, kinh tế, văn hoá, thể thao, lịch sử, giáo dục… </p>
+                        <h4 class="mb-3">Phản hồi của giáo viên</h4>
+                        <p>Giáo viên là những người có vai trò quan trọng trong trường học, do đó, các câu hỏi khảo sát dành cho giáo viên mà bạn phát triển sẽ rất quan trọng trong việc cung cấp cho bạn cái nhìn sâu sắc về cách họ cảm thấy và đối phó. Tìm hiểu xem họ thực sự đang nghĩ gì, họ cần gì để cung cấp trải nghiệm giáo dục tốt nhất có thể và bất kỳ hỗ trợ hoặc nguồn lực bổ sung nào mà bạn cần cung cấp. Các cuộc khảo sát trực tuyến là một cách nhanh chóng và hiệu quả để thu thập thông tin quan trọng này.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5">
-                        <h4 class="mb-3">Môi trường tự nhiên </h4>
-                        <p>Là một môi trường bao gồm tất cả các sinh vật sống và không sống xuất hiện tự nhiên trên Trái Đất.</p>
+                        <h4 class="mb-3">Sự hài lòng của sinh viên</h4>
+                        <p>Làm thế nào hài lòng học sinh của bạn? Bằng cách tạo một cuộc khảo sát về mức độ hài lòng của sinh viên, bạn có thể thu thập phản hồi từ sinh viên ở tất cả các cấp học về chất lượng giảng dạy, tài nguyên học tập, cơ sở vật chất rộng hơn và thậm chí cả đồ ăn trong căng tin của bạn.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5">
-                        <h4 class="mb-3">Môi trường trên cạn.</h4>
-                        <p>Là những được tìm thấy trên đất liền, như rừng, đồng cỏ, sa mạc, bờ biển và đất ngập nước. Môi trường sống trên cạn cũng bao gồm môi trường sống do con người tạo ra, như trang trại, thị trấn, thành phố và môi trường sống dưới mặt đất, như hang động và hầm mỏ.</p>
+                        <h4 class="mb-3">Sự hài lòng của giáo viên và quản trị viên</h4>
+                        <p>Giáo viên và cán bộ quản lý giáo dục của bạn có hài lòng khi làm việc không? Đo lường tốt hơn cảm nhận của họ về môi trường làm việc, thủ tục, con đường phát triển sự nghiệp và thậm chí cả đồng nghiệp của họ thông qua một cuộc khảo sát trực tuyến ẩn danh.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5 mb-lg-0">
-                        <h4 class="mb-3">Môi trường đất.</h4>
-                        <p>Là là lớp ngoài cùng của thạch quyển. Đất bị biến đổi tự nhiên dưới tác động tổng hợp của các nhân tố khác trong môi trường đó là nước, không khí, sinh vật.</p>
+                        <h4 class="mb-3">
+                            Học sinh tốt nghiệp và phản hồi tốt nghiệp
+                        </h4>
+                        <p>Mỗi năm, một lứa sinh viên mới sẽ chuyển đến từ trường học hoặc trường đại học của bạn, nhưng trải nghiệm giáo dục của họ như thế nào? Nó có đáp ứng được mong đợi của họ và thực hiện lời hứa không? Bằng cách thực hiện một cuộc khảo sát về học sinh tốt nghiệp hoặc tốt nghiệp, bạn có thể nhận được phản hồi cần thiết để giúp bạn tiếp tục tiến bộ qua từng năm.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5 mb-lg-0">
-                        <h4 class="mb-3">Môi trường nước .</h4>
-                        <p> Là môi trường mà những cá thể tồn tại, sinh sống và tương tác qua lại đều bị ảnh hưởng và phụ thuộc vào nước. </p>
+                        <h4 class="mb-3">Phản hồi của sinh viên</h4>
+                        <p> Đảm bảo trường học của bạn và việc giảng dạy bạn cung cấp hiệu quả nhất có thể bằng cách thu thập phản hồi từ chính học sinh. Ví dụ, học sinh có thấy nhân viên hỗ trợ không? Họ có cảm thấy thoải mái khi đóng góp trong lớp không? Bạn học của họ cư xử tốt như thế nào?</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="service-item mb-5 mb-lg-0">
-                        <h4 class="mb-3">Môi trường không khí.</h4>
+                    <div class="service-item mb-lg-0">
+                        <h4 class="mb-3">Khảo sát đánh giá khóa học và đào tạo</h4>
                         <p>
-                            Là hỗn hợp các khí bao bọc quanh trái đất có nhiệm vụ duy trì và bảo vệ sự sống trên toàn bộ bề mặt trái đất.
+                            Cho dù khóa đào tạo hoặc các khóa học mà chúng tôi tham dự là miễn phí hay trả phí, thì những người tham dự và người hướng dẫn cần phải đáp ứng một số phẩm chất nhất định. Nghiên cứu và đánh giá xem khóa học của bạn có thành công hay không, bằng cách thu thập phản hồi của người tham dự về tài liệu khóa học, thiết bị hỗ trợ giảng dạy, môi trường phòng học và hiệu suất của người hướng dẫn.
                         </p>
                     </div>
                 </div>
@@ -190,7 +192,7 @@
                 <div class="col-lg-7 ">
                     <div class="section-title">
                         <span class="h6 text-color">Lời chứng thực của khách hàng</span>
-                        <h2 class="mt-3 content-title">Kiểm tra những gì khách hàng của chúng tôi nói về chúng tôi</h2>
+                        <h2 class="mt-3 content-title">Kiểm tra sự hài lòng của người tham gia khảo sát</h2>
                     </div>
                 </div>
             </div>
@@ -202,7 +204,7 @@
                     <i class="ti-quote-left text-color"></i>
 
                     <div class="testimonial-item-content">
-                        <p class="testimonial-text">Đây là một cuộc khảo sát hữu ích mang lại nhiều lợi ích cho xã hội, sau đó sẽ tổng hợp những ý kiến hay nhất về vẫn đề bảo vệ môi trường ..</p>
+                        <p class="testimonial-text">Đây là một cuộc khảo sát hữu ích mang lại nhiều lợi ích cho xã hội, sau đó sẽ tổng hợp những ý kiến hay nhất về vẫn đề học đường  ..</p>
 
                         <div class="testimonial-author">
                             <h5 class="mb-0 text-capitalize">Thomas Johnson</h5>
@@ -214,8 +216,7 @@
                     <i class="ti-quote-left text-color"></i>
 
                     <div class="testimonial-item-content">
-                        <p class="testimonial-text">Các cuộc khảo sát mô tả chính xác hiện trạng của môi trường như thế nào và lấy ý kiến người tham gia khảo sát về các bước cải thiện.</p>
-
+                        <p class="testimonial-text">Các cuộc khảo sát mô tả lại những gì sảy ra trong khoảng thời gian đó. Đưa ra các ý kiến để có thể giải quyét vấn đề đó.</p>
                         <div class="testimonial-author">
                             <h5 class="mb-0 text-capitalize">Mickel hussy</h5>
                             <p>Excutive Director,themefisher</p>
@@ -226,7 +227,7 @@
                     <i class="ti-quote-left text-color"></i>
 
                     <div class="testimonial-item-content">
-                        <p class="testimonial-text">Đây là một cuộc khảo sát hữu ích mang lại nhiều lợi ích cho xã hội, sau đó sẽ tổng hợp những ý kiến hay nhất về vẫn đề bảo vệ môi trường ..</p>
+                        <p class="testimonial-text">Đây là một cuộc khảo sát hữu ích mang lại nhiều lợi ích cho xã hội, sau đó sẽ tổng hợp những ý kiến hay nhất về vẫn đề học đường  ..</p>
 
                         <div class="testimonial-author">
                             <h5 class="mb-0 text-capitalize">Thomas Johnson</h5>
@@ -238,8 +239,7 @@
                     <i class="ti-quote-left text-color"></i>
 
                     <div class="testimonial-item-content">
-                        <p class="testimonial-text">Các cuộc khảo sát mô tả chính xác hiện trạng của môi trường như thế nào và lấy ý kiến người tham gia khảo sát về các bước cải thiện.</p>
-
+                        <p class="testimonial-text">Các cuộc khảo sát mô tả lại những gì sảy ra trong khoảng thời gian đó. Đưa ra các ý kiến để có thể giải quyét vấn đề đó.</p>
                         <div class="testimonial-author">
                             <h5 class="mb-0 text-capitalize">Mickel hussy</h5>
                             <p>Excutive Director,themefisher</p>
@@ -256,7 +256,7 @@
                 <div class="col-lg-7 text-center">
                     <div class="section-title">
                         <span class="h6 text-color">Tin mới nhất</span>
-                        <h2 class="mt-3 content-title text-white">Các bài báo về môi trường</h2>
+                        <h2 class="mt-3 content-title text-white">Các bài báo về khảo sát </h2>
                     </div>
                 </div>
             </div>
@@ -273,9 +273,9 @@
                                 <a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
                             </div>*@
 
-                            <h3 class="mt-3 mb-5 lh-36"><a href="https://canhquansaigon.com/nhung-giai-phap-giup-cai-thien-moi-truong-song/" class="text-white ">Giải pháp giúp cải thiện môi trường sống</a></h3>
+                            <h3 class="mt-3 mb-5 lh-36"><a href="" class="text-white ">Giải pháp giúp cải thiện vấn nạn bạo lực học đường </a></h3>
 
-                            <a href="https://canhquansaigon.com/nhung-giai-phap-giup-cai-thien-moi-truong-song/" class="btn btn-small btn-solid-border btn-round-full text-white">Tìm hiểu thêm</a>
+                            <a href="" class="btn btn-small btn-solid-border btn-round-full text-white">Tìm hiểu thêm</a>
                         </div>
                     </div>
                 </div>
@@ -291,9 +291,9 @@
                                 <a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
                             </div>*@
 
-                            <h3 class="mt-3 mb-5 lh-36"><a href="https://onghutcobang.vn/chung-ta-can-lam-gi-de-bao-ve-moi-truong-hien-nay/" class="text-white">Chúng ta cần làm gì để bảo vệ môi trường hiện nay?</a></h3>
+                            <h3 class="mt-3 mb-5 lh-36"><a href="" class="text-white">Chúng ta cần làm gì để nâng cao trình độ giáo dục?</a></h3>
 
-                            <a href="https://onghutcobang.vn/chung-ta-can-lam-gi-de-bao-ve-moi-truong-hien-nay/" class="btn btn-small btn-solid-border btn-round-full text-white">Tìm hiểu thêm </a>
+                            <a href="" class="btn btn-small btn-solid-border btn-round-full text-white">Tìm hiểu thêm </a>
                         </div>
                     </div>
                 </div>
@@ -309,9 +309,9 @@
                                 <a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
                             </div>*@
 
-                            <h3 class="mt-3 mb-5 lh-36"><a href="https://vksndtc.gov.vn/tin-tong-hop/chien-luoc-bao-ve-moi-truong-quoc-gia-den-nam-2030-d8-t10145.html" class="text-white">Chiến lược bảo vệ môi trường quốc gia đến năm 2030, tầm nhìn đến năm 2050</a></h3>
+                            <h3 class="mt-3 mb-5 lh-36"><a href="" class="text-white">Kế hoạch thúc đẩy sư tham gia cho các bậc phụ huynh.</a></h3>
 
-                            <a href="https://vksndtc.gov.vn/tin-tong-hop/chien-luoc-bao-ve-moi-truong-quoc-gia-den-nam-2030-d8-t10145.html" class="btn btn-small btn-solid-border btn-round-full text-white">Tìm hiểu thêm </a>
+                            <a href="" class="btn btn-small btn-solid-border btn-round-full text-white">Tìm hiểu thêm </a>
                         </div>
                     </div>
                 </div>
